<resources>
    <string name="app_name">Load App by Marcelo</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="choose">Select the file you want to download.</string>
    <string name="retrofit_option">Retrofit: A Type-safe HTTP client for Android and Java</string>
    <string name="load_app_option">LoadApp: Starter repo for this project</string>
    <string name="glide_option">Glide: Media management and image loading framework</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>

    <string name="downloading_files">Downloading files</string>
    <string name="download_success">Downloaded successfully</string>
    <string name="download_fail">The download has failed</string>
    <string name="download_details">View details</string>
    <string name="file">File: </string>
    <string name="status">Status: </string>
    <string name="back">Back</string>
    <string name="file_image">File image</string>
</resources>
