<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="DetailActivity"
    tools:showIn="@layout/activity_detail">
    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:contentDescription="@string/file_image"
        android:padding="16dp"
        android:src="@drawable/icon_file"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/label_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/text_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_app_option"/>
    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_success" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/back"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>